[package]
name = "ascii_artinator_web"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo-net = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Event",
  "InputEvent",
  "MouseEvent",
  "HtmlInputElement"
]

[dependencies.yew]
version = "0.20"
features = ["csr"]
